@@ -1,3 +1,5 @@
+* Rewrite document.viewport methods getDimensions, getWidth, and getHeight to avoid browser sniffs, increase speed, and fix Opera 9.5 support. [#337 state:resolved] [jddalton, Nick Stakenburg]
+
 * Fix Element#clonePosition issues with element margins, borders, and padding. Closes #11613. [azazel, jddalton, Nick Stakenburg]
 
 * Minor clean-up to Element#cumulativeOffset and Element#positionedOffset. [jddalton]
